--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
